update README & config

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DEFAULT_IMAGE_WIDTH=1024
 DEFAULT_IMAGE_HEIGHT=1024
 DEFAULT_NUM_IMAGES=1
 DEFAULT_STYLE=ANIME
-DEFAULT_NEGATIVE_PROMPT=ugly, blurry, low quality, distorted, deformed
+DEFAULT_NEGATIVE_PROMPT=worst quality, normal quality, low quality, low res, blurry, text, watermark, logo, banner, extra digits, cropped, jpeg artifacts, signature, username, error, sketch ,duplicate, ugly, monochrome, geometry, mutation, disgusting
 DEFAULT_GENERATION_TIMEOUT=300
 DEFAULT_CHECK_INTERVAL=2
 DEFAULT_MAX_ATTEMPTS=30
